--- a/src/sass/_interface.sass
+++ b/src/sass/_interface.sass
@@ -1,23 +1,24 @@
 .menu__link 
     display: block
     margin: auto
-    padding: 0.7em 1.25em
+    padding: 0.5em 1.25em
     font-family: sans-serif
     font-size: 1rem
     text-decoration: none
     color: white
     position: relative
     transition: all .3s cubic-bezier(.2, 0, 0, 1)
+    // text-align: center
     z-index: 1
-    margin-bottom: 1.5em
+    margin-bottom: 1.1em
     &:after 
         content: ''
         display: block
-        height: 2px
+        height: 0
         position: absolute
         bottom: 0
-        right: 1.25rem
-        left: 1.25rem
+        right: 1rem
+        left: 1rem
         background-color: #ffffff
         transition: all .3s cubic-bezier(.2, 0, 0, 1)
         transform-origin: bottom center
@@ -115,6 +116,8 @@
 
 .form
     width: 100%
+    &__block
+        display: flex
     &__title
         margin-bottom: 30px
         color: rgba(0,0,0,0.55)
@@ -126,7 +129,7 @@
         text-transform: uppercase
         @media ( max-width: 1400px )
             font-size: 0.8rem
-    &__tel, .form__name
+    &__tel, .form__name, .form__email, .form__message
         font-size: 1rem
         margin-bottom: 0.625em
         width: 100%
@@ -134,6 +137,11 @@
         border: 1px solid #fc961d 
         @media ( max-width: 1400px )
             font-size: 0.8rem
+    &__tel
+        margin-right: 10px
+    &__message
+        resize: none
+        height: 80px !important
     &__btn 
         margin: 0 auto
         font-size: 1rem
@@ -171,7 +179,7 @@
             align-items: center
         &__body
             position: relative
-            width: 600px
+            max-width: 600px
             padding: 20px
             background-color: #ffffff
         &__close
@@ -247,7 +255,7 @@
             align-items: center
         &__body
             position: relative
-            width: 360px
+            max-width: 600px
             padding: 20px
             background-color: #ffffff
         &__close
