--- a/src/sass/_settings.sass
+++ b/src/sass/_settings.sass
@@ -13,6 +13,8 @@ input:focus, textarea:focus
   outline: none
 button:active, button:focus
   outline: none
+textarea
+  overflow: auto
 a 
   text-decoration: none 
 h1, h2, h3, h4, h5, ul
