--- a/src/sass/templates/_advantage.sass
+++ b/src/sass/templates/_advantage.sass
@@ -71,6 +71,8 @@
         @media ( max-width: 1740px )
             font-size: 1rem
             margin-bottom: 20px
+        @media ( max-width: 540px )
+            text-align: left
     &-item 
         font-size: 1rem
         position: relative
