--- a/src/sass/templates/_catalog.sass
+++ b/src/sass/templates/_catalog.sass
@@ -118,10 +118,15 @@
                     &::before
                         transition: width 0.3s
                         width: 50%
+                @media ( max-width: 540px )
+                    transform: scale(1)
+                    outline: none
             @media ( max-width: 1750px )
                 font-size: 0.7rem
         @media ( max-width: 1750px )
             font-size: 0.75rem
+        @media ( max-width: 540px )
+            width: 100%
         &__title
             position: relative
             text-transform: uppercase
@@ -148,6 +153,8 @@
                 width: 100%
             @media ( max-width: 1750px )
                 font-size: 0.65rem
+            @media ( max-width: 540px )
+                font-size: 1.1rem
         &__footer
             font-size: 1rem
             display: flex
