--- a/src/sass/templates/_company.sass
+++ b/src/sass/templates/_company.sass
@@ -20,6 +20,8 @@
         justify-content: space-between
         @media ( max-width: 1430px )
             font-size: 0.7rem
+        @media ( max-width: 1300px )
+            align-items: center
         @media ( max-width: 980px )
             width: 100%
             padding-bottom: 0
@@ -55,14 +57,66 @@
             font-size: 1.2rem
     &__text 
         font-size: 1.5rem
-        max-height: 80%
-        overflow: auto
         padding-right: 0.5em
         font-weight: 300
         span 
             border-bottom: 1px solid #fc961d
+        @media ( max-width: 1770px )
+            font-size: 1.4rem
+        @media ( max-width: 1670px )
+            font-size: 1.2rem
         @media ( max-width: 1430px )
             font-size: 1.07rem
+    &__slogan
+        margin: 1.6em 0
+        padding: 0.8em 1em 0.6em 1em
+        position: relative
+        font-size: 1.6rem
+        line-height: 1.3
+        letter-spacing: 0.15em
+        text-transform: uppercase
+        font-weight: 300
+        text-align: center
+        width: fit-content
+        background-color: rgb(226, 226, 226)
+        &::before
+            content: ''
+            position: absolute
+            font-size: 1rem
+            width: 2.3125em
+            height: 2.3125em
+            top: -2.5em
+            left: 0
+            background: url('../img/quotes.svg') no-repeat
+            background-size: cover
+            transform: rotate(180deg)
+            @media ( max-width: 1300px )
+                font-size: 0.8rem
+            @media ( max-width: 980px )
+                font-size: 0.6rem
+        &::after
+            content: ''
+            font-size: 1rem
+            position: absolute
+            width: 2.3125em
+            height: 2.3125em
+            bottom: -2.5em
+            right: 0
+            background: url('../img/quotes.svg') no-repeat
+            background-size: cover
+            @media ( max-width: 1300px )
+                font-size: 0.8rem
+            @media ( max-width: 980px )
+                font-size: 0.6rem
+        @media ( max-width: 1770px )
+            font-size: 1.3rem
+        @media ( max-width: 1670px )
+            font-size: 1.2rem
+        @media ( max-width: 1450px )
+            font-size: 1.1rem
+        @media ( max-width: 1300px )
+            font-size: 0.9rem
+            margin-top: 4em
     &__logo 
         width: 21em
         img 
