--- a/src/sass/templates/_nav.scss
+++ b/src/sass/templates/_nav.scss
@@ -27,29 +27,41 @@
 }
 
 .nav__phone {
-    padding-left: 15px;
-    margin-top: 50px;
+    font-size: 1rem;
+    padding-left: 3em;
+    margin-top: 4.375em;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    @media (max-width: 520px) {
+        font-size: 0.85rem;
+    }
+    @media (max-width: 380px) {
+        font-size: 0.7rem;
+    }
 }
 
 .nav__link {
-    font-size: 1.2rem;
+    font-size: 1rem;
     position: relative;
     color: #ffffff;
     letter-spacing: 3px;
-    margin-bottom: 1.042em;
+    margin-bottom: 1.7em;
+    &:last-child {
+        margin-bottom: 0;
+    }
+    &:hover {
+        color: rgba(#ffffff, 0.7)
+    }
     @media (max-width: 380px) {
-        font-size: 0.8rem;
+        font-size: 0.7rem;
     }
 }
 .nav__link::before {
     content: "";
     font-size: 1rem;
     position: absolute;
-    top: 2px;
-    left: -1.5em;
+    top: 0;
+    left: -1.7em;
     background: url("../img/smartphone-main.svg") no-repeat;
     background-size: cover;
     width: 1.3em;
